<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/header"
        android:background="#EEF8F8"
        android:layout_marginBottom="10dp"
        android:weightSum="1">

        <EditText
            android:layout_height="match_parent"
            android:layout_width="200dp"
            android:id="@+id/etTodoTitle"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:fontFamily="Trebuchet MS"
            android:background="#EEF8F8"
            android:inputType="none"
            android:layout_weight="0.93"/>

        <ImageButton
            android:layout_width="12dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:background="#EEF8F8"
            android:src="@drawable/trashcan_icon"
            android:id="@+id/btnDelete"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_weight="0.06"/>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff"
        android:padding="5dp"
        android:alpha="0.75"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/header">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:textSize="15sp"
            android:gravity="top"
            android:id="@+id/etNote"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:hint="@string/todo_notes_hint_label"
            android:layout_above="@+id/dueSelector"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/dueSelector"
            >

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sbDue"
                android:thumb="@drawable/thumb"
                android:progressDrawable="@drawable/progress"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:id="@+id/tvNow"
                android:textSize="8sp"
                android:textColor="#c16e6e6e"
                android:gravity="center"
                android:text="@string/today_label"
                android:textStyle="italic"
                android:layout_below="@+id/sbDue"
                android:layout_marginRight="14dp"
                android:layout_toLeftOf="@+id/tvWeek"/>

            <TextView
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:id="@+id/tvWeek"
                android:textSize="8sp"
                android:textColor="#c16e6e6e"
                android:gravity="center"
                android:text="@string/this_week_label"
                android:textStyle="italic"
                android:layout_below="@+id/sbDue"
                android:layout_marginRight="13dp"
                android:layout_toLeftOf="@+id/tvMonth"/>

            <TextView
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:id="@+id/tvMonth"
                android:textSize="8sp"
                android:textColor="#c16e6e6e"
                android:gravity="center"
                android:text="@string/this_month_label"
                android:textStyle="italic"
                android:layout_marginEnd="54dp"
                android:layout_alignTop="@+id/tvWeek"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>